<resources>
    <string name="app_name">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Shubham Khunt</string>
    <string name="nav_header_subtitle">shubhamkhunt08@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_feedback">Settings</string>
    <string name="action_exit">Settings</string>


    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_trackOrder">Track order</string>
    <string name="menu_addProduct">Add product</string>
    <string name="menu_vacation">Vacation</string>
    <string name="menu_subscription">Subscription</string>
    <string name="menu_help">Help</string>
    <string name="menu_contactUs">Contact us</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="communicate">Communicate</string>
</resources>
