<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_trackOrder"
            android:icon="@drawable/ic_trackorder"
            android:title="@string/menu_trackOrder" />
        <item
            android:id="@+id/nav_addProduct"
            android:icon="@drawable/ic_add_product"
            android:title="@string/menu_addProduct" />
        <item
            android:id="@+id/nav_vacation"
            android:icon="@drawable/ic_vacation"
            android:title="@string/menu_vacation" />
        <item
            android:id="@+id/nav_subscription"
            android:icon="@drawable/ic_subscriptions_black_24dp"
            android:title="@string/menu_subscription" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_outline_black_24dp"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_contactus"
            android:icon="@drawable/ic_contact_us"
            android:title="@string/menu_contactUs" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
